# cbar

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
data/: io.github.alexprates.CBar.desktop.in  io.github.alexprates.CBar.metainfo.xml
docs/: cosmic-community-post.md
i18n/de/: cbar.ftl
i18n/en/: cbar.ftl
i18n/es/: cbar.ftl
i18n/fr/: cbar.ftl
i18n/it/: cbar.ftl
i18n/ja/: cbar.ftl
i18n/pt-BR/: cbar.ftl
i18n/sv/: cbar.ftl
i18n/zh-CN/: cbar.ftl
packaging/: cargo-sources.json  io.github.alexprates.CBar.json
plugins/: demo.10s.sh  glados-monitor.30s.sh  openai_codex.5m.sh  showcase-memory-bar.5s.sh
scripts/: install-from-release.sh  install-latest.sh  install-local.sh  uninstall-local.sh
src/: app.rs  catalog.rs  config.rs  lib.rs  localize.rs  main.rs  parser.rs  plugin.rs
