[package]
name = "cbar"
version = "1.1.1"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
base64 = "0.22.1"
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
] }
rust-embed = "8.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["process", "rt", "time"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
